# sample-agentcore-websearch-agent-skill

./: .gitignore  AGENTS.md  README.md  pyproject.toml  setup.sh  teardown.sh
cfn/: agentcore-websearch.yaml
scripts/: export-env.sh
skills/agentcore-websearch/: SKILL.md  agentcore_websearch.py  pyproject.toml  requirements.txt  websearch
skills/agentcore-websearch/src/agentcore_websearch/: cli.py
src/agentcore_websearch/: __init__.py  cli.py
